--- a/doc/papers/15-AIIA/main.tex
+++ b/doc/papers/15-AIIA/main.tex
@@ -4,7 +4,7 @@
 \usepackage{color}
 \usepackage{listings}
 
-\renewcommand{\baselinestretch}{0.98}
+%\renewcommand{\baselinestretch}{0.98}
 
 %\setlength{\topmargin}{-0.5cm}
 %\setlength{\oddsidemargin}{0.5cm}
@@ -35,12 +35,12 @@ Cooperative Autonomous Robots in Complex and Human Populated Environments}
 %                                     also used for the TOC unless
 %                                     \toctitle is used
 %
-\author{L. Iocchi$^1$,  E. Erdem$^2$,  L. Jeanpierre$^3$, A.-I. Mouaddib$^3$, H. Sahli$^4$ \\
+\author{L. Iocchi$^1$,  M. T. L\'azaro$^1$,  L. Jeanpierre$^2$, A.-I. Mouaddib$^2$, E. Erdem$^3$, H. Sahli$^4$ \\
 $\,$\\
 $^1$ DIAG, % Department of Computer, Control, and Management Engineering\\ 
 Sapienza University of Rome, Italy\\
-$^2$ Sabanci University, Turkey \\
-$^3$ GREYC, University of Caen Lower-Normandy, France\\
+$^2$ GREYC, University of Caen Lower-Normandy, France\\
+$^3$ Sabanci University, Turkey \\
 $^4$ Vrije Universiteit Brussel, Belgium
 }
 
@@ -55,13 +55,8 @@ $^4$ Vrije Universiteit Brussel, Belgium
 
 \begin{abstract}
 
-Public spaces in large cities are increasingly becoming complex, more hostile and  
-unpleasant to use because of the overcrowding, rush and complex information in signboards. 
-It is in the interest of cities to make their public spaces easier to use, friendlier to visitors and safer to increasing elderly population and to the people with disabilities. 
-Meanwhile, we observe in the last decade a tremendous progress in the development of robots in dynamic, complex and uncertain environments. The new challenge for the near future is to deploy the robots in public spaces to make easier and safer the use of these spaces. 
-
-In this paper, we provide an overview of the \coaches project which addresses fundamental issues related to the design and development of autonomous robots with high-level skills for environment modeling and scene understanding, distributed autonomous decision-making, short-term interaction with humans and robust and safe navigation in overcrowded spaces. 
-In particular, we describe the main components in which Artificial Intelligence techniques are used and integrated with the robotic system, as well as implementation details and some preliminary tests of these components. The implementation and the performed tests confirm the suitable integration of AI and robotics techniques to solve complex problems in complex environments, where human-robot interaction is a key feature.
+The deployment of robots in dynamic, complex and uncertain environments populated by people is gaining more and more attention, from both research and application perspectives. The new challenge for the near future is to deploy intelligent social robots in public spaces to make easier and safer the use of these spaces. 
+In this paper, we provide an overview of the \coaches project which addresses fundamental issues related to the design and development of autonomous robots to be deployed in public spaces. In particular, we describe the main components in which Artificial Intelligence techniques are used and integrated with the robotic system, as well as implementation details and some preliminary tests of these components. 
 
 \end{abstract}
 
