15-AIIA first final version

--- a/doc/papers/15-AIIA/conclu.tex
+++ b/doc/papers/15-AIIA/conclu.tex
@@ -3,8 +3,8 @@
 
 In this paper, we have described the main concepts of the \coaches project and in particular its Artificial Intelligence and Robotics components and their integration. 
 More specifically, we have described a framework for integrating knowledge representation and reasoning, MDP planning and PNP execution, allowing a feedback from execution to reasoning in order to update and improve the current model of the world. 
-Some implementation features and preliminary results of such an integration are also shown in order to assess the feasibility of the proposed architecture.
-While most of the project will be developed and experimented in the next years, the design and the preliminary tests reported in this paper show the feasibility and the effectiveness of the proposed approach.
+Implementation and preliminary tests of such an integration have been performed to assess the suitability of the proposed architecture.
+%While most of the project will be developed and experimented in the next years, the design and the preliminary tests reported in this paper show the feasibility and the effectiveness of the proposed approach.
 
 Many interesting results are expected from the \coaches project, since the environment and the challenges considered here are very ambitious. 
 Among the several performance evaluation procedures, we aim at including extensive user studies that will be used to validate the effective development of intelligent social robots performing complex tasks in public populated areas. 
