--- a/doc/papers/15-AIIA/main.tex
+++ b/doc/papers/15-AIIA/main.tex
@@ -71,7 +71,7 @@ In this paper, we provide an overview of the \coaches project which addresses fu
 
 \input{conclu}
 
-\section*{Acknowledgements}
+\paragraph{\bf  Acknowledgements.}
 
 \coaches is funded within the CHIST-ERA 4$^{th}$ Call for Research projects, 2013,
 Adaptive Machines in Complex Environments (AMCE) Section.
